opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/coq-bonsai"
dev-repo: "git+https://github.com/clarus/coq-bonsai.git"
bug-reports: "https://github.com/clarus/coq-bonsai/issues"
authors: ["Guillaume Claret"]
license: "GPL-3.0"
build: [
  ["./configure.sh"]
  [make "-j%{jobs}%"]
  [make "-C" "extraction"]
]
depends: [
  "coq" {>= "8.8"}
  "coq-list-string"
  "coq-simple-io"
]
tags: [
  "keyword:bonsai"
  "keyword:effects"
  "keyword:extraction"
]
synopsis: "Generate fresh Bonsai on your terminal"
